--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@vue/cli": "^4.0.5",
+    "@vue/cli": "^4.1.1",
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
     "vue-image-upload-resize": "^2.1.1",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
