--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "@vue/cli": "^4.1.1",
     "axios": "^0.19.0",
+    "bcryptjs": "^2.4.3",
     "core-js": "^3.3.2",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.13",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-image-upload-resize": "^2.1.1",
