--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.4.0",
     "@vue/cli": "^4.1.1",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "core-js": "^3.3.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.13",
+    "nodemon": "^2.0.1",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
     "vue-image-upload-resize": "^2.1.1",
@@ -38,6 +41,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
+    "material-design-icons-iconfont": "^5.0.1",
     "prettier": "^1.18.2",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
