--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.3.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "material-design-icons": "^3.0.1",
     "mongoose": "^5.7.13",
     "nodemon": "^2.0.1",
     "vue": "^2.6.10",
