--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "vue-axios": "^2.1.5",
     "vue-image-upload-resize": "^2.1.1",
     "vue-router": "^3.1.3",
+    "vue-swal": "^1.0.0",
+    "vue-sweetalert2": "^2.1.5",
     "vuetify": "^2.1.0",
     "vuetify-image-input": "^19.1.0",
     "vuex": "^3.0.1"
